--- a/ansible/deploy/gunicorn.service
+++ b/ansible/deploy/gunicorn.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 WorkingDirectory=/srv/www/{{ app_name }}
-ExecStart=/usr/bin/gunicorn -b 0.0.0.0:8080 --chdir application app:app
+ExecStart=/usr/bin/gunicorn -b 0.0.0.0:8080 --chdir backend app:app
 
 [Install]
 WantedBy=multi-user.target
