--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,10 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-swipeable-views": "^0.13.9",
+    "react-swipe": "^6.0.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "swipe-js-iso": "^2.1.5",
     "validator": "^13.1.17",
     "videojs-record": "^4.1.0",
     "wavesurfer.js": "^4.1.1"
