--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "swipe-js-iso": "^2.1.5",
+    "swr": "^0.3.5",
     "validator": "^13.1.17",
     "videojs-record": "^4.1.0",
     "wavesurfer.js": "^4.1.1"
