--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,8 +2,11 @@ aniso8601==8.0.0
 argon2-cffi==20.1.0
 async-generator==1.10
 attrs==20.2.0
+auth0-python==3.13.0
 backcall==0.2.0
 bleach==3.2.1
+boto3==1.15.11
+botocore==1.18.11
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
@@ -11,6 +14,7 @@ click==7.1.2
 cryptography==3.1.1
 decorator==4.4.2
 defusedxml==0.6.0
+dnspython==1.16.0
 ecdsa==0.14.1
 entrypoints==0.3
 Flask==1.1.2
@@ -27,6 +31,7 @@ ipywidgets==7.5.1
 itsdangerous==1.1.0
 jedi==0.17.2
 Jinja2==2.11.2
+jmespath==0.10.0
 jsonschema==3.2.0
 jupyter==1.0.0
 jupyter-client==6.1.7
@@ -65,6 +70,7 @@ QtPy==1.9.0
 requests==2.24.0
 rope==0.17.0
 rsa==4.6
+s3transfer==0.3.3
 Send2Trash==1.5.0
 six==1.15.0
 terminado==0.9.1
