--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
+    "copy-to-clipboard": "^3.3.1",
     "jwt-decode": "^3.0.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
@@ -19,6 +20,7 @@
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
+    "react-share": "^4.3.0",
     "react-swipe": "^6.0.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
