Edit nginx config to support https

--- a/ansible/deploy/nginx.conf
+++ b/ansible/deploy/nginx.conf
@@ -1,9 +1,9 @@
 server {
-    listen 80;
-    listen [::]:80;
-    root /var/www/{{ app_name }}/client/build;
+    server_name listent.app;
+    root /var/www/listent-app/client/build;
     index index.html index.htm;
-
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log;
     location / {
         try_files $uri $uri/ =404;
         add_header Cache-Control "no-cache";
@@ -20,4 +20,24 @@ server {
         proxy_set_header Host              $http_host;
         proxy_pass http://localhost:8080/api/v1/;
     }
+
+    listen [::]:443 ssl ipv6only=on; # managed by Certbot
+    listen 443 ssl; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/listent.app/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/listent.app/privkey.pem; # managed by Certbot
+    include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
+    ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
+}
+server {
+    if ($host = listent.app) {
+        return 301 https://$host$request_uri;
+    } # managed by Certbot
+
+
+    listen 80;
+    listen [::]:80;
+    server_name listent.app;
+    return 404; # managed by Certbot
+
+
 }
