--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
     "copy-to-clipboard": "^3.3.1",
+    "get-blob-duration": "^1.1.2",
     "jwt-decode": "^3.0.0",
     "lodash": "^4.17.20",
     "react": "^16.13.1",
