--- a/ansible/deploy/nginx.conf
+++ b/ansible/deploy/nginx.conf
@@ -4,20 +4,23 @@ server {
     root /var/www/{{ app_name }}/client/build;
     index index.html index.htm;
 
-    location / {
-        try_files $uri $uri/ =404;
-        add_header Cache-Control "no-cache";
-    }
-    location /static {
-        expires 1y;
-        add_header Cache-Control "public";
-    }
-    location /api/v1/ {
+    location /api/v1 {
         proxy_set_header Host              $host;
         proxy_set_header X-Real-IP         $remote_addr;
         proxy_set_header X-Forwarded-For   $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header Host              $http_host;
-        proxy_pass http://localhost:8080/api/v1/;
+        proxy_pass http://localhost:8080/api/v1;
     }
+
+    location /static {
+        expires 1y;
+        add_header Cache-Control "public";
+    }
+
+    location / {
+        try_files $uri $uri/ =404;
+        add_header Cache-Control "no-cache";
+    }
+    
 }
