--- a/ansible/deploy/gunicorn.service
+++ b/ansible/deploy/gunicorn.service
@@ -4,7 +4,8 @@ After=network.target
 
 [Service]
 WorkingDirectory=/var/www/{{ app_name }}
-ExecStart=/usr/bin/gunicorn -b 0.0.0.0:8080 --chdir backend main:APP
+ExecStart=/usr/bin/gunicorn -w 4 -b 0.0.0.0:8080 --chdir backend --access-logfile /var/log/gunicorn/access.log --error-logfile /var/log/gunicorn/error.log main:APP
+EnvironmentFile=/etc/listent-app.env
 
 [Install]
 WantedBy=multi-user.target
