--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,10 +7,39 @@ on:
   workflow_dispatch:
 
 jobs:
+  build:
+    defaults:
+      run:
+        working-directory: client
+    runs-on: ubuntu-latest
+    steps:
+      - name: clone repo
+        uses: actions/checkout@v2
+      - name: install node
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.x
+      - name: install node packages
+        run: npm install
+      - name: build!
+        run: npm run build
+      - name: upload artifact
+        uses: actions/upload-artifact@v1
+        with:
+          name: react-build
+          path: build
   deploy:
     runs-on: ubuntu-latest
+    needs: build
     steps:
     - uses: actions/checkout@v2
     - uses: ./.github/actions/ansible
       env:
         AWS_EC2_KEY: ${{ secrets.AWS_EC2_KEY }}
+    - name: download artifact
+      uses: actions/download-artifact@v1
+      with:
+        name: react-build
+    - shell: bash
+      run: |
+        ls -lah
