--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,6 +23,8 @@ jobs:
         run: npm install
       - name: build!
         run: npm run build
+        env:
+          CI: false
       - name: upload artifact
         uses: actions/upload-artifact@v1
         with:
