--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/upload-artifact@v1
         with:
           name: react-build
-          path: build
+          path: client/build
   deploy:
     runs-on: ubuntu-latest
     needs: build
@@ -44,4 +44,6 @@ jobs:
         name: react-build
     - shell: bash
       run: |
+        ls -lah
+        cd react-build
         ls -lah
