--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
+    - shell: bash
+      run: |
+        pwd
+        ls -lah
     - uses: actions/checkout@v2
-    - uses: ./.github/actions/ansible
-      env:
-        AWS_EC2_KEY: ${{ secrets.AWS_EC2_KEY }}
     - name: download artifact
       uses: actions/download-artifact@v1
       with:
@@ -45,7 +46,7 @@ jobs:
     - shell: bash
       run: |
         pwd
-        which scp
         ls -lah
-        cd react-build
-        ls -lah
+    - uses: ./.github/actions/ansible
+      env:
+        AWS_EC2_KEY: ${{ secrets.AWS_EC2_KEY }}
