devops: ansible copy react build over to remote

--- a/ansible/deploy.yaml
+++ b/ansible/deploy.yaml
@@ -5,13 +5,13 @@
   become: yes
   become_method: sudo
   tasks:
-  - name: add yarn apt key
-    apt_key:
-      url: https://dl.yarnpkg.com/debian/pubkey.gpg
-  - name: add yarn debian repo
-    apt_repository:
-      repo: deb https://dl.yarnpkg.com/debian/ stable main
-      filename: yarn
+  # - name: add yarn apt key
+  #   apt_key:
+  #     url: https://dl.yarnpkg.com/debian/pubkey.gpg
+  # - name: add yarn debian repo
+  #   apt_repository:
+  #     repo: deb https://dl.yarnpkg.com/debian/ stable main
+  #     filename: yarn
   - name: install packages
     apt: 
       name: "{{ packages }}"
@@ -21,7 +21,7 @@
         - nginx
         - gunicorn
         - python3-pip
-        - yarn
+        # - yarn
 
 - hosts: webservers
   become: yes
@@ -52,6 +52,15 @@
 #       shell:
 #         cmd: yarn install && yarn build
 #         chdir: /var/www/{{ app_name }}/client
+
+- hosts: webservers
+  become: yes
+  become_method: sudo
+  tasks:
+  - name: copy react build dir to remote
+    copy:
+      src: react-build
+      dest: /var/www/{{ app_name }}/client/build
 
 - hosts: webservers
   become: yes
