--- a/ansible/deploy/nginx.conf
+++ b/ansible/deploy/nginx.conf
@@ -6,7 +6,8 @@ server {
     error_log /var/log/nginx/error.log;
 
     location / {
-        try_files $uri $uri/ =404;
+        try_files $uri /index.html;
+        # try_files $uri $uri/ =404;
         add_header Cache-Control "no-cache";
     }
 
