--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "lodash": "^4.17.20",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-lazyload": "^3.0.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
