--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "LisTent",
-  "name": "LisTent - A new social networking app that focuses on audio-based content",
+  "name": "LisTent - Interactive Audio Platform",
   "icons": [
     {
       "src": "logo192.png",
@@ -15,6 +15,6 @@
   ],
   "start_url": ".",
   "theme_color": "#ffffff",
-  "background_color": "#ffffff",
+  "background_color": "#1DDBE8",
   "display": "standalone"
 }
