--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -11,6 +11,12 @@
       "src": "logo512.png",
       "sizes": "512x512",
       "type": "image/png"
+    },
+    {
+      "src": "maskable_icon.png",
+      "sizes": "196x196",
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "start_url": ".",
