--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+      - dev
   workflow_dispatch:
 
 jobs:
@@ -34,11 +35,11 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - uses: actions/checkout@v2
-    - name: download artifact
-      uses: actions/download-artifact@v1
-      with:
-        name: react-build
-    - uses: ./.github/actions/ansible
-      env:
-        AWS_EC2_KEY: ${{ secrets.AWS_EC2_KEY }}
+      - uses: actions/checkout@v2
+      - name: download artifact
+        uses: actions/download-artifact@v1
+        with:
+          name: react-build
+      - uses: ./.github/actions/ansible
+        env:
+          AWS_EC2_KEY: ${{ secrets.AWS_EC2_KEY }}
