--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-share": "^4.3.0",
     "react-swipe": "^6.0.4",
     "react-visibility-sensor": "^5.1.1",
+    "recordrtc": "^5.6.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "swipe-js-iso": "^2.1.5",
