devops: update nginx config to use domain var

--- a/ansible/deploy/nginx.conf
+++ b/ansible/deploy/nginx.conf
@@ -1,5 +1,5 @@
 server {
-    server_name listent.app;
+    server_name {{ domain }};
     root /var/www/listent-app/client/build;
     index index.html index.htm;
     access_log /var/log/nginx/access.log;
@@ -35,12 +35,12 @@ server {
 }
 
 server {
-    if ($host = listent.app) {
+    if ($host = {{ domain }}) {
         return 301 https://$host$request_uri;
     } # managed by Certbot
 
     listen 80;
     listen [::]:80;
-    server_name listent.app;
+    server_name {{ domain }};
     return 404; # managed by Certbot
 }
