Add link support

--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react-dom": "^16.13.1",
     "react-lazyload": "^3.0.0",
     "react-lines-ellipsis": "^0.14.1",
+    "react-linkify": "^1.0.0-alpha",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
