--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "redux-thunk": "^2.3.0",
     "swipe-js-iso": "^2.1.5",
     "swr": "^0.3.5",
+    "ts-ebml": "^2.0.2",
     "validator": "^13.1.17",
     "videojs-record": "^4.1.0",
     "wavesurfer.js": "^4.1.1"
