--- a/ansible/deploy/nginx.conf
+++ b/ansible/deploy/nginx.conf
@@ -28,8 +28,8 @@ server {
 
     listen [::]:443 ssl ipv6only=on; # managed by Certbot
     listen 443 ssl; # managed by Certbot
-    ssl_certificate /etc/letsencrypt/live/listent.app/fullchain.pem; # managed by Certbot
-    ssl_certificate_key /etc/letsencrypt/live/listent.app/privkey.pem; # managed by Certbot
+    ssl_certificate /etc/letsencrypt/live/{{ domain }}/fullchain.pem; # managed by Certbot
+    ssl_certificate_key /etc/letsencrypt/live/{{ domain }}/privkey.pem; # managed by Certbot
     include /etc/letsencrypt/options-ssl-nginx.conf; # managed by Certbot
     ssl_dhparam /etc/letsencrypt/ssl-dhparams.pem; # managed by Certbot
 }
