--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,10 +1,33 @@
+.DS_Store
+.flaskenv
+.flaskenv
+*.pyc
+*.pyo
 *.db
-*.idea
 *.ipynb
-*.vscode
-*__pycache__
-venv
+*.pem
 .env
+env/
+env*
+venv/
+dist/
+build/
+*.egg
+*.egg-info/
+_mailinglist
+.tox/
+.cache/
+.pytest_cache/
+__pycache__/
+.idea/
+docs/_build/
+.vscode
+
+# Coverage reports
+htmlcov/
+.coverage
+.coverage.*
+*,cover
+
 api/main/audio
 api/main/images
-*.pem
