--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,7 +8,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  deploy:
     defaults:
       run:
         working-directory: client
@@ -20,26 +20,14 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
-      - name: install node packages
-        run: npm install
-      - name: build!
-        run: npm run build
+      - name: npm install and build
+        run: |
+          npm install
+          npm run build
+        working-directory: client
         env:
           CI: false
-      - name: upload artifact
-        uses: actions/upload-artifact@v1
-        with:
-          name: react-build
-          path: client/build
-  deploy:
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - uses: actions/checkout@v2
-      - name: download artifact
-        uses: actions/download-artifact@v1
-        with:
-          name: react-build
-      - uses: ./.github/actions/ansible
+      - name: run ansible action
+        uses: ./.github/actions/ansible
         env:
           AWS_EC2_KEY: ${{ secrets.AWS_EC2_KEY }}
