--- a/client/package.json
+++ b/client/package.json
@@ -18,7 +18,6 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
-    "react-lazyload": "^3.0.0",
     "react-lines-ellipsis": "^0.14.1",
     "react-linkify": "^1.0.0-alpha",
     "react-redux": "^7.2.1",
@@ -33,9 +32,7 @@
     "swipe-js-iso": "^2.1.5",
     "swr": "^0.3.5",
     "ts-ebml": "^2.0.2",
-    "validator": "^13.1.17",
-    "videojs-record": "^4.1.0",
-    "wavesurfer.js": "^4.1.1"
+    "validator": "^13.1.17"
   },
   "scripts": {
     "start": "react-scripts start",
