--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-helmet": "^6.1.0",
+    "react-joyride": "^2.2.1",
     "react-lines-ellipsis": "^0.14.1",
     "react-linkify": "^1.0.0-alpha",
     "react-redux": "^7.2.1",
