Add hash tag support

--- a/client/package.json
+++ b/client/package.json
@@ -15,23 +15,23 @@
     "get-blob-duration": "^1.1.2",
     "jwt-decode": "^3.0.0",
     "lodash": "^4.17.20",
-    "react": "^16.13.1",
-    "react-dom": "^16.13.1",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-joyride": "^2.2.1",
     "react-lines-ellipsis": "^0.14.1",
-    "react-linkify": "^1.0.0-alpha",
+    "react-linkify": "^0.2.2",
     "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
-    "react-share": "^4.3.0",
+    "react-scripts": "^4.0.0",
+    "react-share": "^4.3.1",
     "react-swipe": "^6.0.4",
     "react-visibility-sensor": "^5.1.1",
     "recordrtc": "^5.6.1",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "swipe-js-iso": "^2.1.5",
-    "swr": "^0.3.5",
+    "swr": "^0.3.6",
     "ts-ebml": "^2.0.2",
     "validator": "^13.1.17"
   },
