--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -4,14 +4,21 @@ async-generator==1.10
 attrs==20.2.0
 auth0-python==3.13.0
 backcall==0.2.0
+backports-datetime-fromisoformat==1.0.0
 bleach==3.2.1
 boto3==1.15.11
 botocore==1.18.11
+Brotli==1.0.9
 certifi==2020.6.20
 cffi==1.14.3
 chardet==3.0.4
 click==7.1.2
 cryptography==3.1.1
+dash==1.16.3
+dash-core-components==1.12.1
+dash-html-components==1.1.1
+dash-renderer==1.8.2
+dash-table==4.10.1
 decorator==4.4.2
 defusedxml==0.6.0
 dnspython==1.16.0
@@ -19,9 +26,11 @@ ecdsa==0.14.1
 entrypoints==0.3
 Flask==1.1.2
 Flask-API==2.0
+Flask-Compress==1.7.0
 Flask-Cors==3.0.9
 Flask-HTTPAuth==4.1.0
 flask-restplus==0.13.0
+future==0.18.2
 idna==2.10
 importlib-metadata==2.0.0
 ipykernel==5.3.4
@@ -45,12 +54,14 @@ nbconvert==6.0.7
 nbformat==5.0.7
 nest-asyncio==1.4.1
 notebook==6.1.4
+numpy==1.19.2
 packaging==20.4
 pandocfilters==1.4.2
 parso==0.7.1
 pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==7.2.0
+plotly==4.11.0
 prometheus-client==0.8.0
 prompt-toolkit==3.0.7
 ptyprocess==0.6.0
@@ -70,6 +81,7 @@ pyzmq==19.0.2
 qtconsole==4.7.7
 QtPy==1.9.0
 requests==2.24.0
+retrying==1.3.3
 rope==0.17.0
 rsa==4.6
 s3transfer==0.3.3
@@ -85,4 +97,3 @@ webencodings==0.5.1
 Werkzeug==0.16.1
 widgetsnbextension==3.5.1
 zipp==3.3.0
-numpy==1.19.2
