--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "audiobuffer-to-wav": "^1.0.0",
     "axios": "^0.20.0",
     "clsx": "^1.1.1",
     "copy-to-clipboard": "^3.3.1",
@@ -16,6 +17,7 @@
     "get-blob-duration": "^1.1.2",
     "jwt-decode": "^3.0.0",
     "lodash": "^4.17.20",
+    "matroska": "github:nelsontky/node-matroska",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
