Update nginx config

--- a/ansible/deploy/nginx.conf
+++ b/ansible/deploy/nginx.conf
@@ -5,6 +5,11 @@ server {
     access_log /var/log/nginx/access.log;
     error_log /var/log/nginx/error.log;
 
+    location /ffmpeg_asm.js {
+        gzip on;
+        alias /home/ubuntu/listent-app/client/build/ffmpeg_asm.js;
+    }
+
     location / {
         try_files $uri /index.html;
         # try_files $uri $uri/ =404;
